Bug 539658 - [OOPP] Full-screen mode doesn't work with windowless controls (hulu). r=bent.